2009-10-19  Murray Cumming  <murrayc@murrayc.com>

	Use floating point numbers when needed for clutter_actor_animate*().

	* docs/tutorial/clutter-tut.xml:
	* examples/animation/main.c (main): Use, for instance, 100.0 instead of 
	100 for x and y values to clutter_actor_animate*(), as noticed by 
	Neil Roberts on the clutter mailing list a while ago.

2009-08-26  Murray Cumming  <murrayc@murrayc.com>

	Use clutter-1.0 and clutter-gtk-0.10.

	* configure.ac: Use clutter-1.0 and clutter-gtk-0.10.
	* examples/gtk_scrolling/main.c (main): gtk_clutter_viewport_new() takes 
	an extra parameter now.
	* examples/custom_container/examplebox.c (example_box_pick):
	* examples/scrolling/scrollingcontainer.c
	(example_scrolling_container_pick): Use clutter_actor_paint() instead of 
	deprecated clutter_actor_pick(), though I am now not sure if these 
	implementations are correct at all.

2009-06-25  Murray Cumming  <murrayc@murrayc.com>

	Timeline, Animations: Mentino duration not frames-per-second.
	
	* docs/tutorial/clutter-tut.xml: Timeline, Animations: Talk about duration 
	rather than frames and frames-per-second, as per the new API. Describe the 
	wonderful way that clutter now just does the right thing. 

2009-06-25  Murray Cumming  <murrayc@murrayc.com>

	Fixed the build with latest clutter API.
	
	* examples/actor_events/main.c (on_stage_button_press),
	(on_rect_button_press), (on_rect_button_release):
	* examples/animation/main.c (on_alpha), (main):
	* examples/behaviour/main.c (on_alpha), (main):
	* examples/custom_container/examplebox.c
	(example_box_get_preferred_width),
	(example_box_get_preferred_height), (example_box_allocate):
	* examples/full_example/main.c (on_timeline_rotation_completed),
	(rotate_all_until_item_is_at_front), (main):
	* examples/score/main.c (main):
	* examples/scrolling/scrollingcontainer.c
	(example_scrolling_container_allocate):
	* examples/scrolling/scrollingcontainer.h:
	* examples/stage/main.c (on_stage_button_press):